# Agentic-syscall

./: readme.md
backend/: pyproject.toml
backend-Copy/app/: main.py
backend-agentic/: .env.example  pyproject.toml  run.py
backend-agentic/app/: agent_graph.py  agent_nlu.py  main.py  tools.py
backend/app/: agent_nlu.py  lang_agent.py  main.py  syscall_wrapper.py  tools.py  usage.py
backend/tests/: test_lang_agent.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/components/ui/: mention.tsx
nigo@arya07~/Documents/: run.py
nigo@arya07~/Documents/scripts/: test.py
