[project]
name = "backend"
version = "0.1.0"
description = "WebSocket streaming backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-google-genai>=1.0",
    "pydantic>=2",
    "psutil>=5.9"
]

[dependency-groups]
dev = []
